--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.header{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
