--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -5,9 +5,14 @@
     max-width: 1200px;
     padding: 20px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
 }
 .header-list{
     display: flex;
     list-style: none;
+}
+.header-input-a{
+    width: 400px;
+    height: 30px;
 }
