--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -13,6 +13,16 @@
     list-style: none;
 }
 .header-input-a{
+    color: #BBBBBB;
+    background-color: transparent;
+    border: 1px solid #FFFF;
     width: 400px;
     height: 30px;
+}
+.header-input-b{
+    width: 300px;
+    height: 30px;
+    color: #BBBBBB;
+    background-color: transparent;
+    border: 1px solid #FFFF;
 }
