--- a/src/Components/Layout/Layout.css
+++ b/src/Components/Layout/Layout.css
@@ -1,3 +1,13 @@
 .Layout{
     background-color: black;
 }
+.Layout-text{
+    font-family: Noto Sans,sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 70px;
+    letter-spacing: 0.07em;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none; 
+}
