--- a/src/Components/Layout/Layout.css
+++ b/src/Components/Layout/Layout.css
@@ -23,6 +23,9 @@
     height: 20px;
 }
 .Layout-select{
+    color: #FFFF;
+    border: none;
+    background: transparent;
     border-radius: 5px;
     height:20px;
 }
