--- a/src/Components/Layout/Layout.css
+++ b/src/Components/Layout/Layout.css
@@ -6,18 +6,18 @@
     align-items: center;
     justify-content: center;
 }
+.Layout-list{
+    gap: 10px;
+    display: flex;
+    align-items: center;
+}
 .Layout-text{
-    width: 110px;
-    height: 20px;
-    font-family: Noto Sans,sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 70px;
-    letter-spacing: 0.07em;
-    text-align: center;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-    color: #FFFF; 
+    color: #FFFF;
+    font-size: 20px;
+}
+.Layout-img{
+    width: 20px;
+    height: 20px;  
 }
 .Layout-option{
     height: 20px;
@@ -31,4 +31,8 @@
     border-radius: 5px;
     height:20px;
     font-size: 17px;
+}
+.Layout-middle{
+    display: flex;
+    align-items: center;
 }
