--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -3,4 +3,9 @@
     justify-content: space-between;
     justify-content: center;
     gap: 100px;
+    list-style: none;
+}
+.Navbar-link{
+    text-decoration: none;
+
 }
