--- a/src/Components/Layout/Layout.css
+++ b/src/Components/Layout/Layout.css
@@ -43,6 +43,45 @@
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media(max-width:1200px){
     .container{
         width: 1100px;
@@ -91,6 +130,7 @@
   .container{
       width: 500px;
   }
+  .
   
   
   
