--- a/src/Components/Layout/Layout.css
+++ b/src/Components/Layout/Layout.css
@@ -131,7 +131,20 @@
       width: 500px;
   }
   .Layout-container{
-    
+    .Layout-list{
+        gap: 15px;
+        display: flex;
+        align-items: center;
+    }
+    .Layout-text{
+        font-family: Noto Sans;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 19.07px;
+        text-align: center;
+        color: #FFFF;
+        font-size: 20px;
+    }
   }
   
   
