--- a/src/Components/Layout/Layout.css
+++ b/src/Components/Layout/Layout.css
@@ -130,22 +130,12 @@
   .container{
       width: 500px;
   }
-  .Layout-container{
     .Layout-list{
-        gap: 15px;
-        display: flex;
-        align-items: center;
+        gap: 10px;
     }
     .Layout-text{
-        font-family: Noto Sans;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 19.07px;
-        text-align: center;
-        color: #FFFF;
-        font-size: 20px;
+        font-size: 15px;
     }
-  }
   
   
   
@@ -154,7 +144,14 @@
   .container{
       width: 400px;
   }
-  
+  .Layout-list{
+    gap: 10px;
+    display: flex;
+    align-items: center;
+}
+.Layout-text{
+    width: ;
+}
   
   }
   @media(max-width:420px){
