--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -4,6 +4,7 @@
 .header-container{
     max-width: 1200px;
     padding: 20px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -26,3 +27,109 @@
     background-color: transparent;
     border: 1px solid #FFFF;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media(max-width:1200px){
+    .container{
+        width: 1100px;
+    }
+  
+  }
+  @media(max-width:1120px){
+  .container{
+      width: 1000px;
+  }
+  .header-list{
+    flex-wrap: wrap;
+  }
+
+  
+  }
+  @media(max-width:1020px){
+  .container{
+      width: 900px;
+  }
+  .header-input-b{
+    width: 400px;
+  }
+  
+  
+  
+  }
+  @media(max-width:920px){
+  .container{
+      width: 800px;
+  }
+  
+  }
+  @media(max-width:820px){
+  .container{
+      width: 700px;
+  }
+  
+  
+  
+  }
+  @media(max-width:720px){
+  .container{
+      width: 600px;
+  }
+  .header-input-a{
+    width: 200px;
+  }
+  .header-input-b{
+    width: 200px;
+  }
+  
+  
+  
+  }
+  
+  @media(max-width:620px){
+  .container{
+      width: 500px;
+  }
+  
+  
+  
+  }
+  @media(max-width:520px){
+  .container{
+      width: 400px;
+  }
+  
+  
+  }
+  @media(max-width:420px){
+  .container{
+      width: 300px;
+  }
+  }
