--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,3 +1,7 @@
+.Navbar{
+    background: #313131;
+    margin-top: -20px;
+}
 .Navbar-list{
     display: flex;
     justify-content: space-between;
@@ -7,21 +11,49 @@
 }
 .Navbar-link{
     text-decoration: none;
-    font-family: Noto Sans,sans-serif;
+    color: #FFFF;
+    font-family: "PublicSans" ,sans-serif;
     font-size: 18px;
-    font-weight: 400;
-    line-height: 70px;
-    letter-spacing: 0.05em;
-    text-align: center;  
+    line-height: 16.41px;
+    letter-spacing: -0.10769230872392654px;
+    text-align: left;    
+    transition: all 0.7s ease;
+    position: relative; 
+    display: inline-block;
+}
+.Navbar-link::after {
+    content: "";
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color:rgb(240, 240, 246);
+    transform: scaleX(0); 
+    transform-origin: left;
+    transition: transform 0.3s ease;
+}
+.Navbar-link:hover::after {
+    transform: scaleX(1); 
+    background-color:rgb(251, 251, 255); 
+}
+.Navbar-link:hover{
+    transform: scale(1.1);
+    color: rgb(253, 253, 255);
 }
 .navbar-img{
     width: 740px;
     height: 600px;   
 }
+.navbar-mendle{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .navbar-list{
     list-style: none;
-    justify-content: center;
-    display: flex;
+    text-align: center;
 }
 .navbar-title{
     width: 600px;
@@ -33,5 +65,15 @@
     letter-spacing: 0.05em;
     text-align: center;
     text-underline-position: from-font;
-    text-decoration-skip-ink: none;    
+    text-decoration-skip-ink: none;  
+    color: #FFFF;  
+}
+.navbar-btn{
+    justify-content: center;
+    padding: 15px 40px;
+    color: #FFFFFF;
+    border: 1px solid #FFFF;
+    border-radius: 5px;
+    background: transparent;
+
 }
