--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -48,4 +48,6 @@
     text-align: center;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;    
+    color: #FFFFFF;
+
 }
