--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -49,4 +49,5 @@
     text-underline-position: from-font;
     text-decoration-skip-ink: none;    
     color: #FFFFFF;
+    background-color: transparent;
 }
