--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -40,6 +40,8 @@
     gap: 33px;
 }
 .hero-btn{
+    width: 190px;
+    height: 50px;
     font-family: Noto Sans ,sans-serif;
     font-size: 20px;
     font-weight: 400;
@@ -50,4 +52,5 @@
     text-decoration-skip-ink: none;    
     color: #FFFFFF;
     background-color: transparent;
+    border: 1px solid #FFFFFF;
 }
