--- a/src/Components/CellPhone/CellPhone.css
+++ b/src/Components/CellPhone/CellPhone.css
@@ -6,7 +6,7 @@
     list-style: none;
 }
 .CellPhone{
-    background-color: black;
+    background-color: rgb(3, 3, 3);
     margin-top: -22px;
 }
 
