--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -25,7 +25,7 @@
     height: 30px;
     color: #BBBBBB;
     background-color: transparent;
-    border: 1px solid #FFFF;
+    border: 1px solid #fdfbfb;
 }
 
 
