--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -23,7 +23,7 @@
 .header-input-b{
     width: 300px;
     height: 30px;
-    color: #BBBBBB;
+    color: #d1d1d1;
     background-color: transparent;
     border: 1px solid #fdfbfb;
 }
