--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -16,7 +16,7 @@
 .header-input-a{
     color: #BBBBBB;
     background-color: transparent;
-    border: 1px solid #FFFF;
+    border: 1px solid #fcfafa;
     width: 400px;
     height: 30px;
 }
