--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -14,7 +14,7 @@
     list-style: none;
 }
 .header-input-a{
-    color: #BBBBBB;
+    color: #cfcece;
     background-color: transparent;
     border: 1px solid #fcfafa;
     width: 400px;
