--- a/src/Components/Layout/Layout.css
+++ b/src/Components/Layout/Layout.css
@@ -37,7 +37,7 @@
     
 }
 .Layout-select{
-    color: #FFFF;
+    color: #f8f8f8;
     border: none;
     background: transparent;
     border-radius: 5px;
