--- a/src/Components/Layout/Layout.css
+++ b/src/Components/Layout/Layout.css
@@ -33,7 +33,7 @@
 }
 .Layout-option{
     height: 20px;
-    background-color: black;
+    background-color: rgb(6, 6, 6);
     
 }
 .Layout-select{
