--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -72,7 +72,7 @@
     justify-content: center;
     padding: 20px 40px;
     color: #FFFFFF;
-    border: 1px solid #FFFF;
+    border: 1px solid #f6f5f5;
     border-radius: 5px;
     background: transparent;
 }
