--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -71,7 +71,7 @@
 .navbar-btn{
     justify-content: center;
     padding: 20px 40px;
-    color: #FFFFFF;
+    color: #fffdfd;
     border: 1px solid #f6f5f5;
     border-radius: 5px;
     background: transparent;
