--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -11,7 +11,7 @@
 }
 .Navbar-link{
     text-decoration: none;
-    color: #FFFF;
+    color: #ffffff;
     font-family: "PublicSans" ,sans-serif;
     font-size: 18px;
     line-height: 16.41px;
