--- a/src/Components/Layout/Layout.css
+++ b/src/Components/Layout/Layout.css
@@ -24,7 +24,7 @@
     font-weight: 400;
     line-height: 19.07px;
     text-align: center;
-    color: #fbf8f8;
+    color: #ffffff;
     font-size: 20px;
 }
 .Layout-img{
