--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -66,7 +66,7 @@
     text-align: center;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;  
-    color: #ffffff;  
+    color: #dedada;  
 }
 .navbar-btn{
     justify-content: center;
