--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -46,10 +46,10 @@
     height: 601px;   
 }
 .navbar-mendle{
-    list-style: none;
+    /* list-style: none;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
 }
 .navbar-list{
     list-style: none;
